--- a/04-data-visualization-exercises.Rmd
+++ b/04-data-visualization-exercises.Rmd
@@ -20,7 +20,7 @@ knitr::opts_chunk$set(echo = TRUE)
 Let's load the `tidyverse` package. 
 
 ```{r}
-# YOUR CODE HERE 
+library(tidyverse)
 ```
 
 # Import NHANES Data
@@ -28,7 +28,7 @@ Let's load the `tidyverse` package.
 Import your data into a data frame called NHANES. 
 
 ```{r}
-# YOUR CODE HERE 
+nhanes <- read_csv("data/nhanes.csv")
 ```
 
 
@@ -77,7 +77,8 @@ I've made a new data frame called `sleep_by_gender` that shows the average amoun
 ```{r}
 sleep_by_gender <- nhanes %>% 
   group_by(gender) %>% 
-  summarize(avg_sleep = mean(sleep_hrs_night, na.rm = TRUE)) 
+  summarize(avg_sleep = mean(sleep_hrs_night, 
+                             na.rm = TRUE)) 
 ```
 
 Plot the average amount of sleep per night for males and females.
@@ -91,30 +92,13 @@ Plot the average amount of sleep per night for males and females.
 
 # `color` and `fill`
 
-Take your graph from above and make the inside of each bar a different color.
+Take your bar chart from above and make the inside of each bar a different color.
 
 ```{r}
 # YOUR CODE HERE 
 ```
 
-Make your scatterplot from before that shows weight on the x axis and height on the y axis again, but make the dots show up in different colors based on the `phys_active` variable.
-
-```{r}
-# YOUR CODE HERE 
-```
-
-
-# Scales
-
-## color
-
-Take your scatterplot that you just made and add a scale using `scale_color_viridis_d`. 
-
-```{r}
-# YOUR CODE HERE
-```
-
-Do nearly the same thing to change the color of the last bar chart you made (the one about sleep and gender). You will have to use `scale_fill_viridis_d`. 
+Make your scatterplot from before that shows weight on the x axis and height on the y axis again, but make the dots show up in different colors based on the `race1` variable.
 
 ```{r}
 # YOUR CODE HERE 
@@ -123,11 +107,10 @@ Do nearly the same thing to change the color of the last bar chart you made (the
 
 # Plot Labels
 
-Use the code chunk from above and do the following:
+Use the scatterplot from above and do the following:
 
 1. Add a title
-2. Add a better y axis label
-3. Remove the x axis label
+2. Add a better x and y axis label
 
 ```{r}
 # YOUR CODE HERE 
@@ -137,14 +120,7 @@ Use the code chunk from above and do the following:
 
 # Themes
 
-Load the [`hrbrthemes` package](https://hrbrmstr.github.io/hrbrthemes/index.html). It's a package that provides some great default themes. I've installed it for you so you just need to load it.
-
-
-```{r}
-library(hrbrthemes)
-```
-
-Then add the `theme_ipsum` to your plot.
+Use the code chunk from above and then add the `theme_minimal` to your plot.
 
 ```{r}
 # YOUR CODE HERE 
@@ -152,33 +128,9 @@ Then add the `theme_ipsum` to your plot.
 
 # Facets
 
-I've created a data frame called `sleep_by_gender_by_age` for you. Run the code chunk below to load the data frame and take a look at it.
-
-```{r}
-sleep_by_gender_by_age <- nhanes %>% 
-  group_by(gender, age_decade) %>% 
-  summarize(avg_sleep = mean(sleep_hrs_night, na.rm = TRUE)) %>% 
-  drop_na()
-```
-
-Now, see if you can recreate this plot using `facet_wrap` (you can also open it from the plots directory to see it better):
-
-![](plots/sleep-by-gender-by-age.png)
+Use the code chunk from above and make a facetted scatterplot by the `race1` variable.
 
 ```{r}
 # YOUR CODE HERE 
 ```
-
-
-# Save Plots
-
-Save your last plot to a PNG that is 8 inches wide and 5 inches high. Put it in the plots directory and call it "my-sleep-plot.png"
-
-
-```{r}
-# YOUR CODE HERE 
-```
-
-
-
 
