--- a/04-data-visualization-solutions.Rmd
+++ b/04-data-visualization-solutions.Rmd
@@ -103,7 +103,7 @@ ggplot(data = sleep_by_gender,
 
 # `color` and `fill`
 
-Take your graph from above and make the inside of each bar a different color.
+Take your bar chart from above and make the inside of each bar a different color.
 
 ```{r}
 ggplot(data = sleep_by_gender,
@@ -113,126 +113,68 @@ ggplot(data = sleep_by_gender,
   geom_bar(stat = "identity")
 ```
 
-Make your scatterplot from before that shows weight on the x axis and height on the y axis again, but make the dots show up in different colors based on the `phys_active` variable.
+Make your scatterplot from before that shows weight on the x axis and height on the y axis again, but make the dots show up in different colors based on the `race1` variable.
 
 ```{r}
 ggplot(data = nhanes,
        mapping = aes(x = weight,
                      y = height,
-                     color = gender)) +
+                     color = race1)) +
   geom_point()
 ```
 
 
-# Scales
 
-## color
 
-Take your scatterplot that you just made and add a scale using `scale_color_viridis_d`. 
+# Plot Labels
+
+Use the scatterplot from above and do the following:
+
+1. Add a title
+2. Add a better x and y axis label
 
 ```{r}
 ggplot(data = nhanes,
        mapping = aes(x = weight,
                      y = height,
-                     color = gender)) +
+                     color = race1)) +
   geom_point() +
-  scale_color_viridis_d()
-```
-
-Do nearly the same thing to change the color of the last bar chart you made (the one about sleep and gender). You will have to use `scale_fill_viridis_d`. 
-
-```{r}
-ggplot(data = sleep_by_gender,
-       mapping = aes(x = gender,
-                     y = avg_sleep,
-                     fill = gender)) +
-  geom_bar(stat = "identity") +
-  scale_fill_viridis_d()
-```
-
-
-# Plot Labels
-
-Use the code chunk from above and do the following:
-
-1. Add a title
-2. Add a better y axis label
-3. Remove the x axis label
-
-```{r}
-ggplot(data = sleep_by_gender,
-       mapping = aes(x = gender,
-                     y = avg_sleep,
-                     fill = gender)) +
-  geom_bar(stat = "identity") +
-  scale_fill_viridis_d() +
-  labs(title = "Sleep by Gender",
-       y = "Average Hours of Sleep per Night",
-       x = "")
+  labs(title = "Association Between Weight and Height by Race",
+       x = "Weight",
+       y = "Height")
 ```
 
 
 
 # Themes
 
-Load the [`hrbrthemes` package](https://hrbrmstr.github.io/hrbrthemes/index.html). It's a package that provides some great default themes. I've installed it for you so you just need to load it.
-
-
-```{r}
-library(hrbrthemes)
-```
-
-Then add the `theme_ipsum` to your plot.
+Use the code chunk from above and then add the `theme_minimal` to your plot.
 
 ```{r}
-ggplot(data = sleep_by_gender,
-       mapping = aes(x = gender,
-                     y = avg_sleep,
-                     fill = gender)) +
-  geom_bar(stat = "identity") +
-  scale_fill_viridis_d() +
-  labs(title = "Sleep by Gender",
-       y = "Average Hours of Sleep per Night",
-       x = "") +
-  theme_ipsum()
+ggplot(data = nhanes,
+       mapping = aes(x = weight,
+                     y = height,
+                     color = race1)) +
+  geom_point() +
+  labs(title = "Association Between Weight and Height by Race",
+       x = "Weight",
+       y = "Height") +
+  theme_minimal()
 ```
 
 # Facets
 
-I've created a data frame called `sleep_by_gender_by_age` for you. Run the code chunk below to load the data frame and take a look at it.
+Use the code chunk from above and make a facetted scatterplot by the `race1` variable.
 
 ```{r}
-sleep_by_gender_by_age <- nhanes %>% 
-  group_by(gender, age_decade) %>% 
-  summarize(avg_sleep = mean(sleep_hrs_night, na.rm = TRUE)) %>% 
-  drop_na()
+ggplot(data = nhanes,
+       mapping = aes(x = weight,
+                     y = height,
+                     color = race1)) +
+  geom_point() +
+  labs(title = "Association Between Weight and Height by Race",
+       x = "Weight",
+       y = "Height") +
+  theme_minimal() +
+  facet_wrap(~race1)
 ```
-
-Now, see if you can recreate this plot using `facet_wrap` (you can also open it from the plots directory to see it better):
-
-![](plots/sleep-by-gender-by-age.png)
-
-```{r}
-ggplot(data = sleep_by_gender_by_age,
-       mapping = aes(x = age_decade,
-                     y = avg_sleep)) +
-  geom_bar(stat = "identity") +
-  theme_ipsum() +
-  facet_wrap(~gender)
-```
-
-
-# Save Plots
-
-Save your last plot to a PNG that is 8 inches wide and 5 inches high. Put it in the plots directory and call it "my-sleep-plot.png"
-
-
-```{r}
-ggsave("plots/my-sleep-plot.png",
-       width = 8,
-       height = 5)
-```
-
-
-
-
