--- a/03-data-wrangling-and-analysis-exercises.Rmd
+++ b/03-data-wrangling-and-analysis-exercises.Rmd
@@ -20,7 +20,7 @@ knitr::opts_chunk$set(echo = TRUE)
 Load the `tidyverse` package. 
 
 ```{r}
-# YOUR CODE HERE
+library(tidyverse)
 ```
 
 # Import NHANES Data
@@ -28,7 +28,7 @@ Load the `tidyverse` package.
 Import the NHANES data to a data frame called `nhanes`. 
 
 ```{r}
-# YOUR CODE HERE
+nhanes <- read_csv("data/nhanes.csv")
 ```
 
 
@@ -45,8 +45,6 @@ Use `select` to show just the `marital_status` variable.
 # YOUR CODE HERE
 ```
 
-
-
 We can also use `select` for multiple variables. 
 
 Use `select` to show `marital_status` and `education`.
@@ -55,22 +53,7 @@ Use `select` to show `marital_status` and `education`.
 # YOUR CODE HERE
 ```
 
-We can `select` a range of columns using the var1:var2 pattern. `select` all the variables from `health_gen` to the end.
-
-
-```{r}
-# YOUR CODE HERE
-```
-
 We can drop variables using the -var format. Drop the `education` variable.
-
-
-```{r}
-# YOUR CODE HERE
-```
-
-We can drop a set of variables using the -(var1:var2) format. Drop the variables from `health_gen` to the end.
-
 
 ```{r}
 # YOUR CODE HERE
@@ -134,14 +117,6 @@ Use `%in%` within the `filter` function to keep only those who are divorced, sep
 # YOUR CODE HERE
 ```
 
-Create a chain that keeps only those are college grads (line #1). Then, `filter` to keep only those who are divorced, separated, or widowed. Finally, use `select` to show only the `education` and `marital_status` variables.
-
-```{r}
-# YOUR CODE HERE
-```
-
-
-
 We can use `<`, `>`, `<=`, and `>=` for numeric data. 
 
 Use `filter` to only show those who reported at least 5 days of physical activity in the last 30 days (this is the `phys_active_days` variable). Then, use `select` to keep only the `phys_active_days` variable.
@@ -166,17 +141,6 @@ Get the mean hours of sleep per night that respondents say they get.
 ```
 
 
-We can have multiple arguments in each usage of `summarize`.
-
-In addition to calculating the mean hours of sleep per night, calculate the minimum and maximum hours of sleep that respondents reported.
-
-```{r}
-# YOUR CODE HERE
-```
-
-
-
-
 # group_by
 
 ![](slides/images/group-by.png)
@@ -188,30 +152,4 @@ Calculate the mean hours of sleep for females and males using `group_by` and `su
 
 ```{r}
 # YOUR CODE HERE
-````
-
-We can use `group_by` with multiple groups.
-
-Use `group_by` for `gender` and `work` (whether or not respondents are working) before calculating mean hours of sleep.
-
-```{r}
-# YOUR CODE HERE
 ```
-
-
-# Create a new data frame
-
-Sometimes you want to save the results of your work to a new data frame. 
-
-Create a chain that starts with your `nhanes` data frame, does the following, and saves the result to a new data frame called `mental_health_over_30`:
-
-1. Uses `filter` to only include those age 30 or older
-2. Uses `group_by` to create a male and female group
-3. Uses `summarize` to calculate a new variable called `mean_bad_mental_health_days` for males and females that calculates the mean number of days of bad mental health (the variable is `days_ment_hlth_bad`).
-
-```{r}
-# YOUR CODE HERE
-```
-
-
-
