--- a/slides/01-getting-started-slides.Rmd
+++ b/slides/01-getting-started-slides.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Introduction to R Workshop"
+title: "R for Evaluation"
 author: "R for the Rest of Us"
 output:
   xaringan::moon_reader:
@@ -212,7 +212,7 @@ Enter the following into the console pane:
 ```{r eval = F}
 install.packages("usethis")
 library(usethis)
-use_course("https://rfortherestofus.com/workshop-materials/")
+use_course("https://rfortherestofus.com/aea-workshop-materials/")
 ```
 
 
