All updates before workshop

--- a/slides/01-getting-started-slides.Rmd
+++ b/slides/01-getting-started-slides.Rmd
@@ -212,7 +212,7 @@ Enter the following into the console pane:
 ```{r eval = F}
 install.packages("usethis")
 library(usethis)
-use_course("https://rfortherestofus.com/workshop-materials/")
+use_course("https://rfortherestofus.com/aea-workshop-materials/")
 ```
 
 
