--- a/slides/01-getting-started-slides.Rmd
+++ b/slides/01-getting-started-slides.Rmd
@@ -36,19 +36,8 @@ class: center, middle, inverse, dk-section-title
 
 # Introductions
 
-1. Name 
+Please share your name and organization with people at your table
 
---
-
-1. Organization
-
---
-
-1. Why you want to learn R
-
---
-
-1. Share a **boring** fact about yourself
 
 
 ---
@@ -77,7 +66,7 @@ class: center, middle, inverse, dk-section-title
 
 1. Data Visualization
 
--- 
+--
 
 1. Make a Report in RMarkdown!
 
